fixed landons personal website, added dotted spacing from publications list. TODO: add categories and work on blog posts layout

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -4,6 +4,10 @@ body {
     color: #130f30;
     background-image: url('/media/images/background.png');
 }
+.bibtex_content {
+    border-bottom: 1px dotted #4d6680;
+    padding-bottom: 1.5em;
+}
 .bibtex_doi, .bibtex_pmid, .bibtex_url {
     float: right;
     margin-left : 10px;
@@ -12,7 +16,7 @@ body {
     font-weight: bold;
     margin-top: 30px;
 }
-.bibtex_volume, .bibtex_year, .bibtex_pages, .bibtex_journl {
+.bibtex_journal, .bibtex_volume, .bibtex_year, .bibtex_pages, .bibtex_journl {
     float: left;
     margin-right: 10px;
 }
